--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,9 +26,11 @@
   "homepage": "https://github.com/noriyuki-ishii-820/pokemon-app-2#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "concurrently": "^6.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.4.0",
     "express": "^4.17.1",
+    "if-env": "^1.0.4",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "passport": "^0.4.1"
