--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "react-bootstrap": "^1.5.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "validator": "^13.6.0"
   }
 }
