--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
   },
   "homepage": "https://github.com/noriyuki-ishii-820/pokemon-app-2#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.3.2",
     "concurrently": "^6.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.4.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.12.7",
+    "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "react-bootstrap": "^1.5.2",
