--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "dotenv": "^8.4.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "mongodb": "^3.6.9",
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "path": "^0.12.7",
     "react-bootstrap": "^1.5.2",
     "react-router-dom": "^5.2.0",
+    "typescript": "^4.3.4",
     "validator": "^13.6.0"
   }
 }
